@@ -4,6 +4,11 @@ Revision history for Perl extension PGXN::API
       - Documentation and README documents now have their white space
         normalized to single spaces before indexing. This allows highlighting
         to work better in result sets. Suggested by Marvin Humphrey.
+      - The PGXN::API::Searcher object used by the router is now maintained
+        across requests, rather than created a new for every call to the
+        /search API. This is because PGXN::API::Searcher v0.7.1 properly
+        reconnects in the event of a changed index, so we don't have to worry
+        about it here.
 
 0.7.0   2011-03-31T20:55:51
       - Added "search" URI template to the API server's `/index.json`.
